# packfile

./: CHANGELOG.md  Cargo.toml  README.md
src/: codec.rs  error.rs  high_level.rs  lib.rs  low_level.rs  packet_line.rs  util.rs
src/snapshots/: packfile__high_level__test__deterministic.snap  packfile__high_level__test__git_verify_pack.snap  packfile__low_level__test__packfile__is_readable_by_git.snap  packfile__low_level__test__packfile__snapshot.snap  packfile__low_level__test__packfile_entry__blob__full.snap  packfile__low_level__test__packfile_entry__commit__full.snap  packfile__low_level__test__packfile_entry__tree__full.snap
