[package]
name = "packfile"
authors = ["Jordan Doyle <jordan@doyle.la>"]
description = "A simple library providing utilities to generate Git Packfiles in memory and send them to clients"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
keywords = ["git", "packfile", "in-memory", "protocol"]
categories = ["development-tools"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2"
flate2 = "1.0"
hex = "0.4"
indexmap = "1.9"
itoa = "1.0"
sha1 = "0.10"
thiserror = "1.0"
time = "0.3.15"
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tracing = "0.1"

[features]
default = ["tokio-util"]
